--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,17 @@
 /*  your css code here. If applicable */
+table{
+	border-collapse: collapse;
+    border: 1px solid black;
+    margin: 20px auto;
+}
+
+.middle {
+    margin: 0 auto;
+}
+
+.center {
+    text-align: center;
+}
+.right {
+    text-align: right;
+}
